desmiss checkToken replace to claint decoded func
